# lolita-premium-radar

./: .env.example  .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: check.yml
config/: brand_weights.json  sources.yaml
docs/: approach.md  north-star.md
examples/: radar-samples.csv
src/lolita_radar/: __init__.py  brands.py  cli.py  config.py  fetcher.py  market.py  models.py  notifiers.py  parsers.py  pattern.py  rules.py  runner.py  source_dates.py  storage.py  web.py
src/tb_new_arrival_alert/: __init__.py  cli.py  config.py  extractors.py  fetchers.py  matcher.py  models.py  monitor.py  notify.py  radar.py  storage.py  web.py
tests/: test_baseline.py  test_brand_parsers.py  test_brands.py  test_collector.py  test_collector_http.py  test_content_diff.py  test_extractors.py  test_feed_os.py  test_feed_os_acceptance.py  test_feed_os_audit.py  test_fetcher.py  test_generic_page_noise.py  test_inspect.py  test_live_parser_fixtures.py  test_market.py  test_monitor.py  test_notifications.py  test_parsers.py  test_pattern.py  test_radar.py  test_readme.py  test_rules.py  test_shop.py  test_source_dates.py  test_source_health.py  test_storage.py  test_web.py  test_workflow.py
tests/fixtures/: alice_and_the_pirates_news.html  angelic_pretty_news.html  baby_ssb_news.html  closet_child_new.html  lace_market_cards.html  market_samples.html  metamorphose_news.html  moitie_news.html  official_shop_one_product.html  official_shop_products.html  sample_config.json  sample_shop.html  shopify_products.json  wunderwelt_market_cards.html
(+35 files in other folders)
