[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lolita-premium-radar"
version = "0.1.0"
description = "Local release monitor and resale premium radar for Lolita and Japanese fashion items"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
lolita-premium-radar = "lolita_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lolita_radar = ["py.typed", "assets/*.png"]
